# UltimateALPR_Jetson

./: .gitignore  CMakeLists.txt  base64.h  config.json  license_keygen.cpp  main.cpp  packages_required.txt  readme.md  sample_plate_info.json
